[#44] feat: 주기 정보 기능 구현및 고도화
- json db 기능 구현
- gpx 파일을 파싱 구현
- 위도 경도를 기반으로 방향 속도 누적 주행 거리 연산 기능 구현